--- a/public/package.json
+++ b/public/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "socket.io-client": "^4.7.4",
     "vue": "^3.4.15",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.2.5",
     "vue-socket.io-extended": "^4.2.0"
   },
