--- a/public/package.json
+++ b/public/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "latest-version": "^9.0.0",
     "socket.io-client": "^4.7.4",
     "vue": "^3.4.15",
     "vue-axios": "^3.5.2",
+    "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.2.5",
     "vue-socket.io-extended": "^4.2.0"
   },
