--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,6 @@
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
     "socket.io": "^4.7.4",
-    "express-async-handler": "^1.2.0",
-    "jsonwebtoken": "^9.0.2"
+    "express-async-handler": "^1.2.0"
   }
 }
